# ChangeLog for dev-util/monodevelop
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop/ChangeLog,v 1.66 2009/01/05 17:24:03 loki_val Exp $

  05 Jan 2009; Peter Alfredsen <loki_val@gentoo.org>
  monodevelop-1.9.1.ebuild:
  Fix for new gtk-sharp-module eclass

  15 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  monodevelop-1.9.1.ebuild:
  Bump dependencies on -sharp packages to avoid conflicting deps. Bug
  251083.

  14 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  monodevelop-0.18.1.ebuild, monodevelop-0.19.ebuild,
  monodevelop-1.0.ebuild, monodevelop-1.9.1.ebuild:
  Use virtual/monodoc to accomodate inclusion of monodoc in mono from
  >=mono-2.2_pre1

  03 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  monodevelop-1.9.1.ebuild:
  Explain about add-ins, bug 249563.

  02 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  monodevelop-1.9.1.ebuild:
  Fix mono-addins dep, bug 249656

  30 Nov 2008; Peter Alfredsen <loki_val@gentoo.org>
  monodevelop-1.9.1.ebuild:
  Drop gnome use flag, disabling it causes fail. Bug 249417.

  30 Nov 2008; Peter Alfredsen <loki_val@gentoo.org>
  monodevelop-1.9.1.ebuild:
  Gtksourceview component is broken according to upstream.

*monodevelop-1.9.1 (30 Nov 2008)

  30 Nov 2008; Peter Alfredsen <loki_val@gentoo.org>
  +monodevelop-1.9.1.ebuild:
  Bump for mono-2

*monodevelop-1.0 (01 Jun 2008)

  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org>
  +files/monodevelop-1.0-configure.patch,
  +files/monodevelop-1.0-libstetic.patch,
  +files/monodevelop-1.0-parallel-build.patch, +monodevelop-1.0.ebuild:
  Version bump (bug #195925)

  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org>
  -files/monodevelop-0.15-aspnet-template-fix.patch,
  -files/monodevelop-0.15-configure.patch, -monodevelop-0.15.ebuild:
  Wiped out old version

  03 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/monodevelop-0.19-parallel-build.patch, monodevelop-0.19.ebuild: