@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop/monodevelop-1.9.1.ebuild,v 1.9 2009/01/05 17:24:03 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop/monodevelop-1.9.1.ebuild,v 1.10 2009/01/19 21:14:28 loki_val Exp $
 
 EAPI=2
 
@@ -15,32 +15,33 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="+subversion"
 
-RDEPEND=">=dev-lang/mono-1.9
-		 >=virtual/monodoc-1.9
-		 ||	(
-			~dev-dotnet/mono-addins-0.3.1
-			>=dev-dotnet/mono-addins-0.4[gtk]
-			)
-		 >=dev-dotnet/gtk-sharp-2.12.6
-		 >=dev-dotnet/glade-sharp-2.12.6
-		 >=dev-dotnet/gnome-sharp-2.24.0
-		 >=dev-dotnet/gnomevfs-sharp-2.24.0
-		 >=dev-dotnet/gconf-sharp-2.24.0
-		 ||	(
-				net-libs/xulrunner
-				www-client/mozilla-firefox
-		 		www-client/mozilla-firefox-bin
-				www-client/seamonkey
-			)
-		 >=dev-dotnet/xsp-2
-		 subversion? ( dev-util/subversion )
-		 dev-util/ctags"
+RDEPEND="sys-apps/dbus[X]
+	>=dev-lang/mono-1.9
+	>=virtual/monodoc-1.9
+	||	(
+		~dev-dotnet/mono-addins-0.3.1
+		>=dev-dotnet/mono-addins-0.4[gtk]
+	)
+	>=dev-dotnet/gtk-sharp-2.12.6
+	>=dev-dotnet/glade-sharp-2.12.6
+	>=dev-dotnet/gnome-sharp-2.24.0
+	>=dev-dotnet/gnomevfs-sharp-2.24.0
+	>=dev-dotnet/gconf-sharp-2.24.0
+	||	(
+		net-libs/xulrunner
+		www-client/mozilla-firefox
+		www-client/mozilla-firefox-bin
+		www-client/seamonkey
+	)
+	>=dev-dotnet/xsp-2
+	subversion? ( dev-util/subversion )
+	dev-util/ctags"
 
 DEPEND="${RDEPEND}
-		  sys-devel/gettext
-		  x11-misc/shared-mime-info
-		>=dev-util/intltool-0.35
-		>=dev-util/pkgconfig-0.19"
+	sys-devel/gettext
+	x11-misc/shared-mime-info
+	>=dev-util/intltool-0.35
+	>=dev-util/pkgconfig-0.19"
 
 MAKEOPTS="${MAKEOPTS} -j1"
 
