@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/monodevelop
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop/ChangeLog,v 1.66 2009/01/05 17:24:03 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop/ChangeLog,v 1.67 2009/01/19 21:14:28 loki_val Exp $
+
+  19 Jan 2009; Peter Alfredsen <loki_val@gentoo.org>
+  monodevelop-1.9.1.ebuild:
+  Monodevelop needs dbus built with X support to run properly. Thanks to
+  mabi for reporting.
 
   05 Jan 2009; Peter Alfredsen <loki_val@gentoo.org>
   monodevelop-1.9.1.ebuild:
